--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "firebase": "^5.0.3",
+    "linkifyjs": "^2.1.6",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.19"
